@@ -1,0 +1,10 @@
+Makefile
+config.h
+config.log
+config.status
+debian
+libtool
+spec
+src/.deps
+stamp-h1
+tests
